[project]
name = "00-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "configparser>=7.2.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.0",
]
